src/pairing/pairing_code_creator_test_send.stderr
error[E0277]: `std::rc::Rc<i32>` cannot be sent between threads safely
 --> $DIR/pairing_code_creator_test_send.rs:6:5
  |
6 |     the_accepting_send_trait_fn(creator);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ `std::rc::Rc<i32>` cannot be sent between threads safely
...
9 | fn the_accepting_send_trait_fn(_creator: impl PairingCodeCreator + Send) {
  |    ---------------------------                                     ---- required by this bound in `the_accepting_send_trait_fn`
  |
  = help: within `recipe_calculator_lib::pairing::pairing_code_creator::PairingCodeCreatorImpl<recipe_calculator_lib::pairing::pairing_code_creator::DefaultNowSource, recipe_calculator_lib::pairing::pairing_code_creator::DefaultRandCodeGenerator>`, the trait `std::marker::Send` is not implemented for `std::rc::Rc<i32>`
  = note: required because it appears within the type `recipe_calculator_lib::pairing::pairing_code_creator::PairingCodeCreatorImpl<recipe_calculator_lib::pairing::pairing_code_creator::DefaultNowSource, recipe_calculator_lib::pairing::pairing_code_creator::DefaultRandCodeGenerator>`
